# dailyspokesman

./: .env.dev  .gitignore  .pre-commit-config.yaml  Pipfile  Procfile  README.md  docker-compose.yml  entry.py  pyproject.toml  run.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.scripts/: celery.sh  install_redis.sh  lint.sh  redis.sh  run.sh  scheduler.sh
migrations/versions/: 447d817a2a61_create_article_table.py  97c2a23f232b_rename_fields_of_article.py  aeb810095a89_create_article_table.py
newsapp/: __init__.py  config.py  models.py  routes.py  tasks.py
newsapp/api/: __init__.py  routes.py
newsapp/errors/: __init__.py  descriptions.py  handlers.py
newsapp/main/: __init__.py  pagination.py  routes.py
newsapp/models/: article.py
newsapp/scraper/: __init__.py  parser.py  tasks.py
newsapp/templates/: base.html  error.html  index.html  news.html  pagination.html
newsapp/util/: parser.py  scrapper.py
worker/: __init__.py  tasks.py
worker/scraper/: __init__.py  parser.py
